# taintscope

./: .gitignore  README.md  pyproject.toml
examples/: wordpress_plugin_style.php
php-ast/: composer.json  dump_ast.php
taintscope/: __init__.py  cli.py  config.py
taintscope/api/: __init__.py  main.py
taintscope/ast/: __init__.py  base.py  php_parser.py  py_parser.py
taintscope/graph/: __init__.py  call_graph.py
taintscope/llm/: __init__.py  classifier.py
taintscope/storage/: __init__.py  db.py
taintscope/taint/: __init__.py  engine.py  flow.py  rules.py
tests/: test_engine.py
tests/fixtures/php/: rce_interprocedural.php  sqli_basic.php
tests/fixtures/python/: vuln.py
